subindo alterações no section

--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
         <div class="grid gap-16">
           <figure>
             <span class="content-tag">Veículos</span>
-            <img src="assets/images/Image 06.png" alt="" />
+            <img src="assets/images/Image 06.png" alt="Protótipo de veículo voador é apresentado, marcando o início da
+            era dos transportes aéreos pessoa..." />
             <p>
               Protótipo de veículo voador é apresentado, marcando o início da
               era dos transportes aéreos pessoa...
@@ -135,7 +136,8 @@
           </figure>
           <figure>
             <span class="content-tag">Hologramas</span>
-            <img src="assets/images/Image 07.png" alt="" />
+            <img src="assets/images/Image 07.png" alt="Plataforma de videoconferência apresenta nova função de
+            hologramas, tornando as chamada..." />
             <p>
               Plataforma de videoconferência apresenta nova função de
               hologramas, tornando as chamada...
@@ -143,7 +145,8 @@
           </figure>
           <figure>
             <span class="content-tag">Realidade Virtual</span>
-            <img src="assets/images/Image 08.png" alt="" />
+            <img src="assets/images/Image 08.png" alt="Nova geração de consoles de videogame é lançada, trazendo gráficos
+            ultra-realistas e experiên..." />
             <p>
               Nova geração de consoles de videogame é lançada, trazendo gráficos
               ultra-realistas e experiên...
@@ -151,7 +154,8 @@
           </figure>
           <figure>
             <span class="content-tag">Internet</span>
-            <img src="assets/images/Image 09.png" alt="" />
+            <img src="assets/images/Image 09.png" alt="Projeto busca oferecer internet de alta velocidade em áreas
+            remotas através de satélites." />
             <p>
               Projeto busca oferecer internet de alta velocidade em áreas
               remotas através de satélites.
