--- a/index.html
+++ b/index.html
@@ -127,8 +127,11 @@
         <div class="grid gap-16">
           <figure>
             <span class="content-tag">Veículos</span>
-            <img src="assets/images/Image 06.png" alt="Protótipo de veículo voador é apresentado, marcando o início da
-            era dos transportes aéreos pessoa..." />
+            <img
+              src="assets/images/Image 06.png"
+              alt="Protótipo de veículo voador é apresentado, marcando o início da
+            era dos transportes aéreos pessoa..."
+            />
             <p>
               Protótipo de veículo voador é apresentado, marcando o início da
               era dos transportes aéreos pessoa...
@@ -136,8 +139,11 @@
           </figure>
           <figure>
             <span class="content-tag">Hologramas</span>
-            <img src="assets/images/Image 07.png" alt="Plataforma de videoconferência apresenta nova função de
-            hologramas, tornando as chamada..." />
+            <img
+              src="assets/images/Image 07.png"
+              alt="Plataforma de videoconferência apresenta nova função de
+            hologramas, tornando as chamada..."
+            />
             <p>
               Plataforma de videoconferência apresenta nova função de
               hologramas, tornando as chamada...
@@ -145,8 +151,11 @@
           </figure>
           <figure>
             <span class="content-tag">Realidade Virtual</span>
-            <img src="assets/images/Image 08.png" alt="Nova geração de consoles de videogame é lançada, trazendo gráficos
-            ultra-realistas e experiên..." />
+            <img
+              src="assets/images/Image 08.png"
+              alt="Nova geração de consoles de videogame é lançada, trazendo gráficos
+            ultra-realistas e experiên..."
+            />
             <p>
               Nova geração de consoles de videogame é lançada, trazendo gráficos
               ultra-realistas e experiên...
@@ -154,8 +163,11 @@
           </figure>
           <figure>
             <span class="content-tag">Internet</span>
-            <img src="assets/images/Image 09.png" alt="Projeto busca oferecer internet de alta velocidade em áreas
-            remotas através de satélites." />
+            <img
+              src="assets/images/Image 09.png"
+              alt="Projeto busca oferecer internet de alta velocidade em áreas
+            remotas através de satélites."
+            />
             <p>
               Projeto busca oferecer internet de alta velocidade em áreas
               remotas através de satélites.
@@ -163,6 +175,86 @@
           </figure>
         </div>
       </section>
+      <section id="ai">
+        <header class="grid grid-flow-col">
+          <h3>Destaque da Inteligência Artificial</h3>
+          <a href="#" class="grid grid-flow-col"></a>
+          <strong>Ver tudo</strong>
+          <span></span>
+        </header>
+        <div class="grid gap-32">
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <span class="content-tag">Inteligência Artificial</span>
+              <h3 class="text-xl">Empresa surpreende o mundo ao anunciar um algoritmo capaz de prever eventos futuros com alta precisão.</h3>
+              <p class="text-sm">
+                Em um avanço surpreendente da inteligência artificial, uma empresa anuncia o desenvolvimento de um algoritmo capaz de prever eventos futuros com notável precisão.
+                Descubra como essa tecnologia está desafiando as fronteiras da previsão e quais são as implicações para diversas áreas, desde finanças até pla...
+              </p>
+            </div>
+            <div>
+              <img src="assets/images/Image 10.png" alt="Em um avanço surpreendente da inteligência artificial, uma empresa anuncia o desenvolvimento de um algoritmo 
+              capaz de prever eventos futuros com notável precisão.
+              Descubra como essa tecnologia está desafiando as fronteiras da previsão e quais são as implicações para diversas áreas, desde finanças até pla...">
+            </div>
+          </article>
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <span class="content-tag">Inteligência Artificial</span>
+              <h3 class="text-xl">Dispositivo portátil promete traduzir instantaneamente diferentes idiomas, facilitando a comunicação global.</h3>
+              <p class="text-sm">
+                Em um mundo cada vez mais conectado, a comunicação sem fronteiras é essencial. Nesse contexto, um dispositivo portátil surge como um verdadeiro
+                 herói linguístico, prometendo quebrar as barreiras idiomáticas instantaneamente. Imagine poder se comunicar fluentemente em qualquer lugar do mundo, indepe...
+              </p>
+            </div>
+            <div>
+              <img src="assets/images/Image 11.png" alt="Em um mundo cada vez mais conectado, a comunicação sem fronteiras é essencial. Nesse contexto, um dispositivo portátil surge como um verdadeiro
+              herói linguístico, prometendo quebrar as barreiras idiomáticas instantaneamente. Imagine poder se comunicar fluentemente em qualquer lugar do mundo, indepe...">
+            </div>
+          </article>
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <span class="content-tag">Inteligência Artificial</span>
+              <h3 class="text-xl">Criados para auxiliar idosos, robôs de companhia ganham popularidade, oferecendo suporte emocional e físico aos usuários.</h3>
+              <p class="text-sm">
+                A tecnologia não só avança, mas também busca tornar a vida mais significativa para todas as gerações. No cenário atual, os robôs sociais, projetados
+                 especialmente para oferecer apoio e companhia aos idosos, estão ganhando destaque. Mais do que meros assistentes, esses robôs são programados para f...
+              </p>
+            </div>
+            <div>
+              <img src="assets/images/Image 12.png" alt="A tecnologia não só avança, mas também busca tornar a vida mais significativa para todas as gerações. No cenário atual, os robôs sociais, projetados
+              especialmente para oferecer apoio e companhia aos idosos, estão ganhando destaque. Mais do que meros assistentes, esses robôs são programados para f...">
+            </div>
+          </article>
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <span class="content-tag">Inteligência Artificial</span>
+              <h3 class="text-xl">Aplicativo utiliza inteligência artificial para ajudar usuários a manterem o foco e aumentarem a produtividade no dia a dia.
+              </h3>
+              <p class="text-sm">
+                No turbilhão da vida moderna, onde distrações são abundantes, um aplicativo inovador surge como um aliado indispensável para quem busca maior concentração
+                 e eficiência no cotidiano. Utilizando avançados algoritmos de inteligência artificial, este aplicativo promete mais do que simplesmente gerenci...
+              </p>
+            </div>
+            <div>
+              <img src="assets/images/Image 13.png" alt="No turbilhão da vida moderna, onde distrações são abundantes, um aplicativo inovador surge como um aliado indispensável para quem busca maior concentração
+              e eficiência no cotidiano. Utilizando avançados algoritmos de inteligência artificial, este aplicativo promete mais do que simplesmente gerenci...">
+            </div>
+          </article>
+        </div>
+      </section>
+      <div>
+        <div id="ads">
+          <img src="assets/Ads.png" alt="" />
+        </div>
+        <section id="more">
+          <header class="grid grid-flow-col">
+            <h3>Viu isso aqui?</h3>
+            <a href="#" class="grid grid-flow-col"></a>
+            <strong>Ver tudo</strong>
+            <span></span>
+        </section>
+      </div>
     </main>
   </body>
 </html>
