--- a/index.html
+++ b/index.html
@@ -235,8 +235,7 @@
               <span class="content-tag">Inteligência Artificial</span>
               <h3 class="text-xl">
                 Criados para auxiliar idosos, robôs de companhia ganham
-                popularidade, oferecendo suporte emocional e físico aos
-                usuários.
+                popularidade, oferecendo suporte emocional e físico aos usu...
               </h3>
               <p class="text-sm">
                 A tecnologia não só avança, mas também busca tornar a vida mais
@@ -279,7 +278,7 @@
           </article>
         </div>
       </section>
-      <div>
+      <aside>
         <div id="ads">
           <img src="assets/Ads.png" alt="" />
         </div>
@@ -304,7 +303,7 @@
                 <span class="content-tag">Software</span>
                 <h3 class="text-xl">
                   Aplicativo de monitoramento ambiental ganha destaque,
-                  incentivando práticas ecológicas e pro...
+                  incentivando práticas ecológ...
                 </h3>
               </div>
             </article>
@@ -336,7 +335,7 @@
                 <span class="content-tag">Criptomoedas</span>
                 <h3 class="text-xl">
                   Surge uma nova moeda digital baseada em tecnologias
-                  sustentáveis, buscando minimizar o i...
+                  sustentáveis, buscando minimizar...
                 </h3>
               </div>
             </article>
@@ -351,7 +350,7 @@
                 <span class="content-tag">Drones</span>
                 <h3 class="text-xl">
                   Empresas de e-commerce implementam frota de drones para
-                  entregas rápidas, transformando o ce...
+                  entregas rápidas, transformando...
                 </h3>
               </div>
             </article>
@@ -367,13 +366,13 @@
                 <span class="content-tag">Impressão 3D</span>
                 <h3 class="text-xl">
                   Tecnologia inovadora permite a impressão 3D de órgãos humanos,
-                  revolucionando a medicina e a lis...
+                  revolucionando a medicina e a...
                 </h3>
               </div>
             </article>
           </div>
         </section>
-      </div>
+      </aside>
     </main>
   </body>
 </html>
